# rotation_aware_traversability_path_planning

./: .gitignore  LICENCE  README.md  dependencies.rosinstall
asterix/asterix_l3_config/: CMakeLists.txt  package.xml
asterix/asterix_l3_config/config/: asterix_lattice_planning.yaml
asterix/asterix_l3_config/launch/: robot_model_server.launch
asterix/asterix_l3_footstep_planning/: 50.export.asterix_l3_footstep_planning.bash.em  CMakeLists.txt  package.xml
asterix/asterix_l3_footstep_planning/config/: asterix_plugin_sets_lattice_planning.yaml
asterix/asterix_l3_footstep_planning/config/planner/: lattice_planning.yaml
asterix/asterix_l3_footstep_planning/config/rviz/: default.rviz
asterix/asterix_l3_footstep_planning/launch/: footstep_planner.launch  footstep_planner_lattice.launch  goal_publisher.launch  main.launch  rviz.launch  start_publisher.launch
asterix/asterix_l3_plugins/: CMakeLists.txt  l3_footstep_planning_plugins.xml  l3_plugins.xml  package.xml
asterix/asterix_l3_plugins/include/asterix_l3_plugins/: asterix_floating_base_post_process.h  asterix_kinematics.h  asterix_turning_state_generator.h
asterix/asterix_l3_plugins/src/: asterix_floating_base_post_process.cpp  asterix_kinematics.cpp  asterix_turning_state_generator.cpp
spot/spot_l3_config/: CMakeLists.txt  package.xml
spot/spot_l3_config/config/: spot_lattice_planning.yaml
spot/spot_l3_config/launch/: robot_model_server.launch
spot/spot_l3_footstep_planning/: CMakeLists.txt  package.xml
spot/spot_l3_footstep_planning/config/: spot_plugin_sets_lattice_planning.yaml
spot/spot_l3_footstep_planning/config/planner/: lattice_planning.yaml
spot/spot_l3_footstep_planning/config/rviz/: default.rviz
spot/spot_l3_footstep_planning/launch/: footstep_planner.launch  footstep_planner_lattice.launch  main.launch
spot/spot_l3_plugins/: CMakeLists.txt  l3_footstep_planning_plugins.xml  l3_plugins.xml  package.xml
spot/spot_l3_plugins/include/spot_l3_plugins/: spot_floating_base_post_process.h  spot_kinematics.h  spot_turning_state_generator.h
spot/spot_l3_plugins/src/: spot_floating_base_post_process.cpp  spot_kinematics.cpp  spot_turning_state_generator.cpp
step_plan_converter/: CMakeLists.txt  package.xml
step_plan_converter/include/step_plan_converter/: step_plan_converter.h
step_plan_converter/launch/: step_plan_converter.launch
step_plan_converter/src/: step_plan_converter.cpp  step_plan_converter_node.cpp
traversability_map_generator/: CMakeLists.txt  package.xml  plugins.xml
traversability_map_generator/config/: grid_map_merger_plugins.yaml
traversability_map_generator/config/rviz/: grid_map_merger_setup.rviz
traversability_map_generator/include/traversability_map_generator/plugins/std/generator/: grid_map_merger.h
traversability_map_generator/launch/: grid_map_merger.launch  rviz.launch
traversability_map_generator/src/plugins/std/generator/: grid_map_merger.cpp
traversability_rotation_planning_plugins/: CMakeLists.txt  package.xml  plugins.xml
traversability_rotation_planning_plugins/include/traversability_rotation_planning_plugins/std/heuristic/: pitch_heuristic.h  traversability_rotation_heuristic.h
traversability_rotation_planning_plugins/include/traversability_rotation_planning_plugins/std/step_cost_estimator/: angular_step_cost_estimator.h  pitch_step_cost_estimator.h  traversability_step_cost_estimator.h
traversability_rotation_planning_plugins/src/std/heuristic/: pitch_heuristic.cpp  traversability_rotation_heuristic.cpp
traversability_rotation_planning_plugins/src/std/step_cost_estimator/: angular_step_cost_estimator.cpp  pitch_step_cost_estimator.cpp  traversability_step_cost_estimator.cpp
