<?xml version="1.0"?>
<package format="2">
  <name>step_plan_converter</name>
  <version>0.0.0</version>
  <description>The step_plan_converter package</description>

  <maintainer email="simon.giegerich@stud.tu-darmstadt.de">Simon Giegerich</maintainer>

  <license>BSD</license>

  <author email="simon.giegerich@stud.tu-darmstadt.de">Simon Giegerich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>l3_footstep_planning_msgs</depend>
</package>
