<?xml version="1.0"?>
<package format="2">
  <name>spot_l3_plugins</name>
  <version>0.1.0</version>
  <description>The spot_l3_plugins package</description>

  <maintainer email="simon.giegerich@stud.tu-darmstadt.de">Simon Giegerich</maintainer>

  <license>BSD</license>

  <author email="simon.giegerich@stud.tu-darmstadt.de">Simon Giegerich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>l3_plugins</depend>
  <depend>l3_footstep_planning_plugins</depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lspot_l3_plugins"/>

    <l3_plugins plugin="${prefix}/l3_plugins.xml"/>
    <l3_footstep_planning_plugins plugin="${prefix}/l3_footstep_planning_plugins.xml"/>
  </export>
</package>
